<resources>
    <string name="app_name">Skill Articles</string>
    <string name="menu_title_search">Search</string>
    <string name="article_search_placeholder">Search</string>
    <string name="bb_search_not_found">Not found</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="bb_search_position">%d of %d</string>
    <string name="retry">Retry</string>

    <string name="title_articles">Articles</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_transcriptions">Transcriptions</string>
    <string name="title_profile">Profile</string>

    <string name="lorem_ipsum">orem ipsum dolor sit amet, consectetur adipiscing elit. Fusce blandit enim elit, id fringilla magna blandit vitae. Pellentesque eu purus sed enim dapibus tempus. Cras tincidunt dolor sapien, sed tempor lorem pulvinar ac. Maecenas pretium fringilla nibh posuere tincidunt. Donec facilisis elementum velit eget vulputate. Nullam efficitur bibendum dapibus. Sed vitae aliquam turpis. Vivamus porttitor porta elit et dignissim. Nunc viverra, sem eget vehicula elementum, ex nisi sollicitudin enim, id gravida ligula quam at libero. Sed id diam at ante maximus congue ac vel tellus. Donec scelerisque tincidunt nunc, pulvinar tristique diam condimentum posuere. Curabitur vehicula in sapien eget maximus. Nam ut suscipit elit. Phasellus sit amet congue odio.

Donec porta augue lectus, ac molestie magna vehicula quis. Sed blandit dictum euismod. Nullam gravida est vel facilisis sollicitudin. Curabitur nec est massa. Nam sagittis quam massa, in egestas sem mollis at. Cras vestibulum arcu in dapibus hendrerit. Nam faucibus, enim vitae accumsan molestie, lacus ligula accumsan nibh, sed posuere turpis justo at nulla. Nam a varius metus, vitae vulputate leo. Fusce at ipsum faucibus, rhoncus mauris ut, rhoncus libero. Vivamus tempor dapibus nisi. Ut quis elit nisi. Quisque consequat lorem sit amet magna vehicula, in porta neque porta. In justo neque, malesuada ut elit eget, dignissim semper magna. Duis faucibus risus id tellus tempor iaculis. Quisque eget elementum tortor.

Integer ac magna sed velit luctus maximus. Quisque vehicula bibendum tincidunt. Nam facilisis, diam vel elementum luctus, tellus nisl fringilla libero, vel finibus dolor velit id est. Vivamus nec ultricies ante. Etiam ornare semper ligula, sed cursus lectus feugiat ut. Mauris sit amet ante nulla. Nam porta est at nibh laoreet, ut ultrices diam placerat. Nam ac elit vel justo vulputate ornare et at turpis. Vivamus sit amet dignissim est.

Aenean sit amet nisi ut nibh tempus egestas vel non mauris. Nulla blandit, justo vitae ultrices posuere, felis nulla placerat enim, quis egestas dui massa at nisi. In malesuada porttitor nunc, non malesuada purus tincidunt sit amet. Fusce in arcu nec elit posuere eleifend a vitae eros. Vivamus id efficitur metus, ac congue mi. Sed placerat justo sed risus egestas, ut varius massa tincidunt. Praesent sed mauris sit amet nibh gravida vestibulum sed ut quam. Nam feugiat felis odio, id sagittis ante viverra vel. In fermentum facilisis nibh, non mattis mauris. Nam pretium aliquet nunc, eleifend varius ante maximus vitae. Quisque ante mi, sodales quis posuere in, ornare in lectus. Curabitur rutrum malesuada metus, nec consequat dolor scelerisque at. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.

Nullam sem sem, rhoncus vitae porttitor et, pretium eu ipsum. Sed semper semper arcu ut efficitur. Donec luctus enim sed porttitor malesuada. Donec lectus nisl, tristique eu odio vel, facilisis consequat enim. Sed consectetur lorem suscipit dolor laoreet lobortis. Curabitur molestie velit sit amet pellentesque commodo. Vivamus rhoncus efficitur ante, ac gravida ipsum finibus ac. Quisque ipsum libero, consectetur non justo eget, venenatis congue elit. Nunc orci odio, aliquet quis odio nec, lacinia aliquam lorem. Proin dignissim sollicitudin sapien at imperdiet. Proin in mauris scelerisque, bibendum mauris ut, pharetra magna.</string>

    <string name="reg_err__invalid_email">Incorrect email entered</string>
    <string name="reg_err__invalid_name">The name must be at least 3 characters long and contain only letters, digits, and the \" - \" and \"_ \" symbols</string>
    <string name="reg_err__invalid_password">The password must be at least 8 characters long and contain only letters and digits</string>
    <string name="reg_err__mismatching_passwords">"Passwords doesn't match "</string>
    <string name="reg_err__empty_field">Name, login, password are required fields and must not be empty</string>

    <string name="reg__name">User name</string>
    <string name="reg__email" translatable="false">Email</string>
    <string name="reg__password">Enter a password</string>
    <string name="reg__confirm_password">Confirm password</string>
    <string name="reg__btn_register">Register</string>

    <string name="auth__title_authorization">Authorization</string>
    <string name="auth__title_privacy_policy">Privacy policy</string>
    <string name="auth__login">Login (email)</string>
    <string name="auth__password">Password</string>
    <string name="auth__btn_login">Login</string>
    <string name="auth__registration">Registration</string>
    <string name="auth__privacy_policy">Privacy policy</string>
    <string name="auth__get_auth_code">How to get authorization code?</string>
    <string name="auth__title_registration">Registration</string>

    <string name="dialog_choose_category__choose_categories">Choose categories</string>
    <string name="dialog_choose_category__apply">Apply</string>
    <string name="dialog_choose_category__reset">Reset</string>

    <string name="comment_item_view__date_ago">%s ago</string>
    <string name="comment_item_view__date_future">in %s</string>

    <string name="profile_fragment__rating">Rating: %d</string>
    <string name="profile_fragment__respect">Respect: %d</string>
    <string name="profile_view_model__storage_permissions_required">Storage permission is required</string>
    <string name="profile_view_model__open_settings">Open settings</string>

    <string name="article_view_model__added_to_bookmarks">Added to bookmarks</string>
    <string name="article_view_model__removed_from_bookmarks">Removed from bookmarks</string>
    <string name="article_view_model__marked_as_liked">Marked as liked</string>
    <string name="article_view_model__dont_like_it">Don\'t like it anymore?</string>
    <string name="article_view_model__i_like_it">No, I still do!</string>
    <string name="article_view_model__copied_to_clipboard">The code was copied to the clipboard</string>
    <string name="article_view_model__comment_must_not_be_empty">Comment must not be empty</string>
    <string name="article_view_model__reply_to">Reply to %s</string>

    <string name="layout_submenu__dark_mode">Dark mode</string>
    <string name="layout_bottombar__not_found">Not found</string>
    <string name="layout_fragment_article__comment">Comment</string>
    <string name="layout_bottom_sheet__take_from_camera">Take from camera</string>
    <string name="layout_bottom_sheet__choose_from_gallery">Choose from gallery</string>
    <string name="layout_bottom_sheet__edit">Edit</string>
    <string name="layout_bottom_sheet__delete">Delete</string>

    <plurals name="comment_item_view__time_second">
        <item quantity="one">just now</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <plurals name="comment_item_view__time_minute">
        <item quantity="one">a minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="comment_item_view__time_hour">
        <item quantity="one">an hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="comment_item_view__time_day">
        <item quantity="one">a day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="comment_item_view__time_year">
        <item quantity="one">a year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="article_item_view__minutes_to_read">
        <item quantity="one">%d minute to read</item>
        <item quantity="other">%d minutes to read</item>
    </plurals>
</resources>
