<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.AuthFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cute_cat_works" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_name"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:hint="@string/reg__name"
            android:theme="@style/TextInputLayoutAppearance"
            app:endIconMode="clear_text"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_login"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:hint="@string/reg__email"
            android:theme="@style/TextInputLayoutAppearance"
            app:endIconMode="clear_text"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrap_name">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_password"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:hint="@string/reg__password"
            android:theme="@style/TextInputLayoutAppearance"
            app:endIconMode="password_toggle"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrap_login">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_confirm"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:hint="@string/reg__confirm_password"
            android:theme="@style/TextInputLayoutAppearance"
            android:visibility="visible"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrap_password">

            <EditText
                android:id="@+id/et_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:backgroundTint="@color/color_accent"
            android:enabled="true"
            android:text="@string/reg__btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrap_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
